--- a/day3/package.json
+++ b/day3/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "part1": "ts-node part1.ts"
+  },
   "devDependencies": {
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
