--- a/day4/package.json
+++ b/day4/package.json
@@ -5,7 +5,8 @@
   "license": "MIT",
   "scripts": {
     "part1": "ts-node part1.ts",
-    "part2": "ts-node part2.ts"
+    "part2": "ts-node part2.ts",
+    "part2-b": "ts-node part2-b.ts"
   },
   "devDependencies": {
     "ts-node": "^10.9.2",
